--- a/myoffice-invoicing-ui/build.gradle
+++ b/myoffice-invoicing-ui/build.gradle
@@ -43,6 +43,6 @@ task buildClient(type: NpmTask, dependsOn: 'npmInstall') {
     args = ['run','build']
 }
 
-bootRun.dependsOn(buildClientDev)
+//bootRun.dependsOn(buildClientDev)
 
-jar.dependsOn(buildClient)
+//jar.dependsOn(buildClient)
