--- a/myoffice-invoicing-rest/build.gradle
+++ b/myoffice-invoicing-rest/build.gradle
@@ -1,11 +1,12 @@
 dependencies {
     compile("edu.noia.myoffice:myoffice-invoicing-domain:${version}")
+    compile("edu.noia.myoffice:myoffice-invoicing-data:${version}")
     compile("edu.noia.myoffice:myoffice-common-rest:${myofficeCommonVersion}")
     compile 'org.springframework.boot:spring-boot-starter-hateoas'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-actuator'
-    compile 'io.springfox:springfox-swagger2:2.6.1'
-    compile 'io.springfox:springfox-swagger-ui:2.6.1'
+    compile 'io.springfox:springfox-swagger2:2.7.0'
+    compile 'io.springfox:springfox-swagger-ui:2.7.0'
     compile 'com.h2database:h2:1.4.196'
     testCompile("edu.noia.myoffice:myoffice-common-testing:${myofficeCommonVersion}")
 }
