--- a/myoffice-invoicing-domain/build.gradle
+++ b/myoffice-invoicing-domain/build.gradle
@@ -1,12 +1,8 @@
 dependencies {
     compile("edu.noia.myoffice:myoffice-common-domain:${myofficeCommonVersion}")
-    compile 'javax.validation:validation-api:1.1.0.Final'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile("edu.noia.myoffice:myoffice-common-util:${myofficeCommonVersion}")
     compile 'org.springframework.boot:spring-boot-starter'
-    compile 'org.hibernate:hibernate-java8:5.2.10.Final'
-    testCompile 'com.h2database:h2:1.4.196'
-    compile 'com.h2database:h2:1.4.196'
-    compile 'org.postgresql:postgresql:42.1.4.jre7'
+    compile 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 bootRepackage {
