--- a/myoffice-invoicing-application/src/main/resources/application.properties
+++ b/myoffice-invoicing-application/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 # Application
 server.port=8092
-spring.application.name=myoffice-invoicing-application
+spring.application.name=myoffice-invoicing
 # Logging
 logging.level.edu.noia.myoffice=DEBUG
 # Admin
 spring.boot.admin.client.enabled=false
+# Registry
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 # Invoicing
 invoicing.default.taxRate=8
 invoicing.default.discountRate=0
