--- a/myoffice-invoicing-application/build.gradle
+++ b/myoffice-invoicing-application/build.gradle
@@ -6,17 +6,18 @@ dependencies {
     compile "edu.noia.myoffice:myoffice-invoicing-query-data:${version}"
     compile "edu.noia.myoffice:myoffice-invoicing-messaging:${version}"
     compile "edu.noia.myoffice:myoffice-invoicing-rest:${version}"
-    compile 'org.springframework.boot:spring-boot-starter-actuator'
-    compile 'org.springframework.boot:spring-boot-configuration-processor'
+    compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile "org.springframework.boot:spring-boot-configuration-processor"
     compile "org.springframework.data:spring-data-rest-hal-browser:${springHalBrowserVersion}"
     compile "io.springfox:springfox-swagger2:${springfoxVersion}"
     compile "io.springfox:springfox-data-rest:${springfoxVersion}"
     compile "io.springfox:springfox-swagger-ui:${springfoxVersion}"
     compile "org.hsqldb:hsqldb:${hsqlDatabaseVersion}"
     compile "org.flywaydb:flyway-core:${flywayVersion}"
-    compile 'mysql:mysql-connector-java'
+    compile "mysql:mysql-connector-java"
     compile "de.codecentric:spring-boot-admin-starter-client:${springBootAdminVersion}"
     compile "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client"
+    compile "org.axonframework:axon-distributed-commandbus-springcloud:${axonVersion}"
 }
 
 bootJar.enabled = true
