--- a/myoffice-invoicing-application/src/main/resources/application.properties
+++ b/myoffice-invoicing-application/src/main/resources/application.properties
@@ -3,6 +3,10 @@ server.port=8093
 spring.application.name=myoffice-invoicing
 # Logging
 logging.level.edu.noia.myoffice=DEBUG
+# Jpa
+spring.jpa.properties.javax.persistence.validation.mode=none
+spring.jpa.hibernate.naming.physical-strategy=edu.noia.myoffice.common.data.jpa.hibernate.naming.PhysicalNamingStrategy
+spring.jpa.hibernate.naming.implicit-strategy=edu.noia.myoffice.common.data.jpa.hibernate.naming.ImplicitNamingStrategy
 # Admin
 spring.boot.admin.client.enabled=false
 # Registry
