--- a/myoffice-invoicing-batch/build.gradle
+++ b/myoffice-invoicing-batch/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-    compile("edu.noia.myoffice:myoffice-invoicing-domain:${version}")
-    compile("edu.noia.myoffice:myoffice-invoicing-query-data:${version}")
-    compile 'org.springframework.boot:spring-boot-starter'
-    compile("org.axonframework:axon-spring-boot-starter:${axonVersion}")
+    compile "edu.noia.myoffice:myoffice-invoicing-domain:${version}"
+    compile "edu.noia.myoffice:myoffice-invoicing-query-data:${version}"
+    compile "org.springframework.boot:spring-boot-starter"
+    compile "org.axonframework:axon-spring-boot-starter:${axonVersion}"
 }
