--- a/myoffice-invoicing-command-data/build.gradle
+++ b/myoffice-invoicing-command-data/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile("edu.noia.myoffice:myoffice-invoicing-command:${version}")
-    compile 'org.springframework.boot:spring-boot-starter'
-    compile("org.axonframework:axon-spring-boot-starter:${axonVersion}")
+    compile "edu.noia.myoffice:myoffice-invoicing-command:${version}"
+    compile "org.springframework.boot:spring-boot-starter"
+    compile "org.axonframework:axon-spring-boot-starter:${axonVersion}"
 }
