--- a/myoffice-invoicing-domain/build.gradle
+++ b/myoffice-invoicing-domain/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    compile("edu.noia.myoffice:myoffice-common-domain:${myofficeCommonVersion}")
-    compile("edu.noia.myoffice:myoffice-common-util:${myofficeCommonVersion}")
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile "edu.noia.myoffice:myoffice-common-domain:${myofficeCommonVersion}"
+    compile "edu.noia.myoffice:myoffice-common-util:${myofficeCommonVersion}"
+    compile "org.slf4j:slf4j-api:1.7.25"
 }
