--- a/myoffice-invoicing-query-data/build.gradle
+++ b/myoffice-invoicing-query-data/build.gradle
@@ -1,8 +1,8 @@
 dependencies {
-    compile("edu.noia.myoffice:myoffice-invoicing-query:${version}")
-    compile("edu.noia.myoffice:myoffice-common-data:${myofficeCommonVersion}")
-    compile 'org.springframework.boot:spring-boot-starter'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.springframework.boot:spring-boot-starter-data-rest'
-    compile 'org.springframework.data:spring-data-envers'
+    compile "edu.noia.myoffice:myoffice-invoicing-query:${version}"
+    compile "edu.noia.myoffice:myoffice-common-data:${myofficeCommonVersion}"
+    compile "org.springframework.boot:spring-boot-starter"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile "org.springframework.boot:spring-boot-starter-data-rest"
+    compile "org.springframework.data:spring-data-envers"
 }
