--- a/myoffice-invoicing-rest/build.gradle
+++ b/myoffice-invoicing-rest/build.gradle
@@ -1,9 +1,9 @@
 dependencies {
-    compile("edu.noia.myoffice:myoffice-invoicing-common:${version}")
-    compile("edu.noia.myoffice:myoffice-invoicing-query-data:${version}")
-    compile("edu.noia.myoffice:myoffice-common-rest:${myofficeCommonVersion}")
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.boot:spring-boot-starter-webflux'
-    compile("org.axonframework:axon-spring-boot-starter:${axonVersion}")
-    compile 'org.springframework.hateoas:spring-hateoas'
+    compile "edu.noia.myoffice:myoffice-invoicing-common:${version}"
+    compile "edu.noia.myoffice:myoffice-invoicing-query-data:${version}"
+    compile "edu.noia.myoffice:myoffice-common-rest:${myofficeCommonVersion}"
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-webflux"
+    compile "org.axonframework:axon-spring-boot-starter:${axonVersion}"
+    compile "org.springframework.hateoas:spring-hateoas"
 }
