--- a/myoffice-invoicing-application/src/main/resources/application.properties
+++ b/myoffice-invoicing-application/src/main/resources/application.properties
@@ -16,3 +16,5 @@ eureka.client.fetch-registry=false
 invoicing.default.taxRate=8
 invoicing.default.discountRate=0
 invoicing.default.delayDayCount=30
+# Flyway
+spring.flyway.enabled=false
